# zabbix-pgbouncer

./: .gitignore  README.md  pyproject.toml
scripts/: pgbouncer.pool.discovery.OLD.sh  pgbouncer.pool.discovery.sh  pgbouncer.stat.OLD.sh  pgbouncer.stat.py  pgbouncer.stat.sh
src/zabbix_pgbouncer_extended_ii/: pgbouncer_stat.py
template/: pgbouncer-extended-ii-template.xml  pgbouncer-extended-template.xml
userparameter/: userparameter_pgbouncer.conf
