[project]
name ="zabbix-pgbouncer-extended-II"
description = "Zabbix plugin for monitoring PgBouncer connections"
requires-python = ">=3.11"
authors = [
	{name="Clemens Schwaighofer", email = "clemens.schwaighofer@omc.com"}
]
readme = "ReadMe.md"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: System Administrators",
	"Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies"]
[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = "information"
reportMissingTypeStubs = "information"
reportUnknownMemberType = "information"
[tool.ruff]
line-length = 120
[tool.black]
# set 10 short for better formatting
line-length = 110
# to avoid " ... " " ... " string sets
# experimental-string-processing = true
preview = true
enable-unstable-feature = ["string_processing"]
[tool.pylint.format]
max-line-length = 120
# [tool.pylint.TYPECHECK]
# generated-members=""
[tool.pylint.miscellaneous]
notes = ["FIXME", "TODO"]
notes-rgx = '(FIXME|TODO)(\((TTD-|#)\[0-9]+\))'
[tool.flake8]
max-line-length = 120
