[project]
name ="zabbix-pgbouncer-extended-II"
version = "1.2.1"
description = "Zabbix plugin for monitoring PgBouncer connections"
authors = [
	{name="Clemens Schwaighofer", email = "clemens.schwaighofer@omc.com"}
]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: System Administrators",
	"Programming Language :: Python :: 3.13",
]

dependencies = []

[project.scripts]
pgbouncer-stat = "zabbix_pgbouncer_extended_ii.pgbouncer_stat:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = "information"
reportMissingTypeStubs = "information"
reportUnknownMemberType = "information"
[tool.ruff]
line-length = 120
[tool.black]
# set 10 short for better formatting
line-length = 110
# to avoid " ... " " ... " string sets
# experimental-string-processing = true
preview = true
enable-unstable-feature = ["string_processing"]
[tool.pylint.format]
max-line-length = 120
# [tool.pylint.TYPECHECK]
# generated-members=""
[tool.pylint.miscellaneous]
notes = ["FIXME", "TODO"]
notes-rgx = '(FIXME|TODO)(\((TTD-|#)\[0-9]+\))'
[tool.flake8]
max-line-length = 120

[tool.pylint.MASTER]
# this is for the tests/etc folders
init-hook='import sys; sys.path.append("scripts/")'
